# P2P-ChatApp

./: ARCHITECTURE.md  README.md  vscode-extensions.txt  vscode.sh
backend/: CMakeLists.txt  config.example.json
backend/include/api/: local_api.h
backend/include/crypto/: crypto_manager.h
backend/include/network/: peer_client.h  peer_server.h
backend/include/node/: node.h
backend/include/supabase/: supabase_client.h
backend/src/: main.cpp
backend/src/api/: local_api.cpp
backend/src/crypto/: crypto_manager.cpp
backend/src/network/: peer_client.cpp  peer_server.cpp
backend/src/node/: node.cpp
backend/src/supabase/: supabase_client.cpp
docs/: README.md  api-endpoints-reference.md  backend-integration-guide.md  frontend-architecture.md  websocket-events-guide.md
docs/backend/: 01-cmake-build-system.md  02-asio-networking.md  03-http-server-api.md  04-libcurl-supabase.md  05-libsodium-crypto.md  06-sqlite-database.md  07-nlohmann-json.md  08-spdlog-logging.md
docs/frontend/: 01-pyside6-basics.md  02-backend-service.md  03-threading-async.md  04-ui-polish.md
docs/guides/: 01-debugging-tips.md  02-testing-guide.md  03-common-pitfalls.md  phase-0-environment-setup.md  phase-1-plaintext-p2p.md  phase-2-supabase-discovery.md  phase-3-encryption.md  phase-4-offline-messages.md  phase-5-tauri-frontend.md  phase-6-integration.md  phase-7-polish-and-packaging.md
docs/infrastructure/: 01-supabase-setup.md  02-environment-setup.md
protocol/: api_contract.md  message_format.md  threat_model.md
ui/: main.py
ui-tauri/: index.html  package-lock.json  package.json
ui-tauri/src/: App.tsx
ui-tauri/src-tauri/: tauri.conf.json
ui-tauri/src-tauri/src/: lib.rs
ui-tauri/src/components/chat/: ChatHeader.tsx  ChatPanel.tsx  ComposeArea.tsx  EmptyChat.tsx  MessageBubble.tsx  MessageGroup.tsx  MessageList.tsx  TypingIndicator.tsx
ui-tauri/src/components/common/: Avatar.tsx  Badge.tsx  StatusDot.tsx  ThemeToggle.tsx
ui-tauri/src/components/contacts/: AddFriendDialog.tsx  (+3 more)
ui-tauri/src/hooks/: useContacts.ts  useMessages.ts  useNotification.ts  useTheme.ts  useWebSocket.ts
ui-tauri/src/lib/: animations.ts  constants.ts
ui-tauri/src/services/: api.ts  sidecar.ts  websocket.ts
ui-tauri/src/stores/: chatStore.ts  contactStore.ts  index.ts  uiStore.ts
ui-tauri/src/styles/: animations.css  chat.css  components.css  globals.css  layout.css  scrollbar.css  theme.css
ui-tauri/src/types/: api.ts  contact.ts  events.ts  message.ts
ui/assets/: .gitkeep
ui/services/: backend_service.py
ui/views/: main_window.py
(+5 files in other folders)
